setup fastapi_users

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_USER = 'postgres'
 DB_PASSWORD = 'postgres'
 DB_PORT = 5435
 DB_NAME = 'fastapi_site_db'
+
+DB_DOCKER_IMAGE_HOST = 'fastapi_postgres'
+
+REDIS_DOCKER_IMAGE_HOST = 'redis'
+REDIS_PORT = 6379
