--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ sqlmodel = "^0.0.8"
 jinja2 = "^3.1.2"
 databases = "^0.6.2"
 asyncpg = "^0.27.0"
+fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
+asyncio = "^3.4.3"
+argon2-cffi = "^21.3.0"
+httpx = "^0.23.1"
 
 
 [build-system]
