--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,8 @@ services:
       - ./fastapi_postgres:/var/lib/postgresql/dat
       - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
       
+  redis:
+    container_name: redis
+    image: redis
+    ports:
+     - 6379:6379
